# lydia

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-docker-image.yml
gigahorse-toolchain/: .gitignore
gigahorse-toolchain/clients/: semantic.dl
gigahorse-toolchain/contracts/ac/: zongzi.hex
gigahorse-toolchain/souffle-addon/: lists.cpp
src/: analysis.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src/contract/: contract.rs  data_structure.rs  mod.rs  status_fetcher.rs
src/flow/: flow_analysis.rs  mod.rs
src/graph/: call_graph.rs  mod.rs
src/outputter/: mod.rs  result_structure.rs
