[package]
name = "lydia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"                                         # For hex string manipulations
web3 = "0.19.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
